--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>palmyra - Главная</title>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="public/images/icon.ico" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="src/index.js"></script>
   </body>
 </html>
